@@ -1,2 +1,3 @@
 example.org www.example.org
 example.com www.example.com wiki.example.com
+>examplenet-rsa >examplenet-ecdsa example.net www.example.net
