@@ -183,6 +183,22 @@ _CHECK_ERRORLOG
 # Disable private key renew
 echo 'PRIVATE_KEY_RENEW="no"' >> config
 
+# Modify domains.txt to contain a leading >alias for identifying this key/cert
+echo ">the_alias ${TMP2_URL} ${TMP3_URL}" > domains.txt
+
+# Run in cron mode but use >alias notation for choosing the config and output directory
+_TEST "Run in cron mode but use >alias notation in domains.txt for choosing the config and output directory"
+./dehydrated --cron > tmplog 2> errorlog || _FAIL "Scrip execution failed"
+_CHECK_NOT_LOG "Checking domain name(s) of existing cert"
+_CHECK_LOG "Generating private key"
+_CHECK_LOG "Requesting challenge for ${TMP2_URL}"
+_CHECK_LOG "Requesting challenge for ${TMP3_URL}"
+_CHECK_LOG "Challenge is valid!"
+_CHECK_LOG "Creating fullchain.pem"
+_CHECK_LOG "Done!"
+_CHECK_ERRORLOG
+
+
 # Run in cron mode one last time, with domain in domains.txt and force-resign (should find certificate, resign anyway, and not generate private key)
 _TEST "Run in cron mode one last time, with domain in domains.txt and force-resign"
 ./dehydrated --cron --force > tmplog 2> errorlog || _FAIL "Script execution failed"
